--- a/SampleApp/app/.gitignore
+++ b/SampleApp/app/.gitignore
@@ -2,6 +2,9 @@
 .gradle/
 build/
 
+*.gradle
+*.idea
+*.DS_Store
 # Local configuration file (sdk path, etc)
 local.properties
 
@@ -18,6 +21,7 @@ output.json
 # IntelliJ
 *.iml
 .idea/
+../.idea/
 misc.xml
 deploymentTargetDropDown.xml
 render.experimental.xml
@@ -31,3 +35,5 @@ google-services.json
 
 # Android Profiling
 *.hprof
+.DS_Store
+../.DS_Store.
